src/main/gen/io/runescript/plugin/lang/parser/RsParser.java
// This class is automatically generated. Do not edit.
package io.runescript.plugin.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.runescript.plugin.lang.psi.RsElementTypes.*;
import static io.runescript.plugin.lang.parser.RsParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;
import static com.intellij.lang.WhitespacesBinders.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class RsParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    boolean r;
    if (t == HOOK_ROOT) {
      r = HookRoot(b, l + 1);
    }
    else {
      r = File(b, l + 1);
    }
    return r;
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARRAY_VARIABLE_DECLARATION_STATEMENT, ASSIGNMENT_STATEMENT, BLOCK_STATEMENT, EMPTY_STATEMENT,
      EXPRESSION_STATEMENT, IF_STATEMENT, LOCAL_VARIABLE_DECLARATION_STATEMENT, RETURN_STATEMENT,
      STATEMENT, SWITCH_STATEMENT, WHILE_STATEMENT),
    create_token_set_(ARITHMETIC_EXPRESSION, ARITHMETIC_VALUE_EXPRESSION, ARRAY_ACCESS_EXPRESSION, BOOLEAN_LITERAL_EXPRESSION,
      CALC_EXPRESSION, COMMAND_EXPRESSION, CONDITION_EXPRESSION, CONSTANT_EXPRESSION,
      COORD_LITERAL_EXPRESSION, DYNAMIC_EXPRESSION, EXPRESSION, GOSUB_EXPRESSION,
      INTEGER_LITERAL_EXPRESSION, LOCAL_VARIABLE_EXPRESSION, LONG_LITERAL_EXPRESSION, NULL_LITERAL_EXPRESSION,
      PAR_EXPRESSION, POSTFIX_EXPRESSION, PREFIX_EXPRESSION, RELATIONAL_VALUE_EXPRESSION,
      SCOPED_VARIABLE_EXPRESSION, STRING_INTERPOLATION_EXPRESSION, STRING_LITERAL_EXPRESSION, SWITCH_CASE_DEFAULT_EXPRESSION),
  };

  /* ********************************************************** */
  // '(' ExpressionList? ')'
  public static boolean ArgumentList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgumentList")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, null);
    r = consumeToken(b, LPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, ArgumentList_1(b, l + 1));
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ExpressionList?
  private static boolean ArgumentList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgumentList_1")) return false;
    ExpressionList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ArithmeticAdditiveOperator ArithmeticMultiplicativeWrapper
  public static boolean ArithmeticAdditiveExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticAdditiveExpression")) return false;
    if (!nextTokenIs(b, "<Expression>", MINUS, PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, ARITHMETIC_EXPRESSION, "<Expression>");
    r = ArithmeticAdditiveOperator(b, l + 1);
    r = r && ArithmeticMultiplicativeWrapper(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '+' | '-'
  public static boolean ArithmeticAdditiveOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticAdditiveOperator")) return false;
    if (!nextTokenIs(b, "<arithmetic additive operator>", MINUS, PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARITHMETIC_OP, "<arithmetic additive operator>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ArithmeticMultiplicativeWrapper ArithmeticAdditiveExpression*
  static boolean ArithmeticAdditiveWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticAdditiveWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArithmeticMultiplicativeWrapper(b, l + 1);
    r = r && ArithmeticAdditiveWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ArithmeticAdditiveExpression*
  private static boolean ArithmeticAdditiveWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticAdditiveWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ArithmeticAdditiveExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArithmeticAdditiveWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ArithmeticBitwiseAndOperator ArithmeticAdditiveWrapper
  public static boolean ArithmeticBitwiseAndExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseAndExpression")) return false;
    if (!nextTokenIs(b, "<Expression>", AMPERSAND)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, ARITHMETIC_EXPRESSION, "<Expression>");
    r = ArithmeticBitwiseAndOperator(b, l + 1);
    r = r && ArithmeticAdditiveWrapper(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '&'
  public static boolean ArithmeticBitwiseAndOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseAndOperator")) return false;
    if (!nextTokenIs(b, AMPERSAND)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AMPERSAND);
    exit_section_(b, m, ARITHMETIC_OP, r);
    return r;
  }

  /* ********************************************************** */
  // ArithmeticAdditiveWrapper ArithmeticBitwiseAndExpression*
  static boolean ArithmeticBitwiseAndWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseAndWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArithmeticAdditiveWrapper(b, l + 1);
    r = r && ArithmeticBitwiseAndWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ArithmeticBitwiseAndExpression*
  private static boolean ArithmeticBitwiseAndWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseAndWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ArithmeticBitwiseAndExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArithmeticBitwiseAndWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ArithmeticBitwiseOrOperator ArithmeticBitwiseAndWrapper
  public static boolean ArithmeticBitwiseOrExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseOrExpression")) return false;
    if (!nextTokenIs(b, "<Expression>", BAR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, ARITHMETIC_EXPRESSION, "<Expression>");
    r = ArithmeticBitwiseOrOperator(b, l + 1);
    r = r && ArithmeticBitwiseAndWrapper(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '|'
  public static boolean ArithmeticBitwiseOrOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseOrOperator")) return false;
    if (!nextTokenIs(b, BAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BAR);
    exit_section_(b, m, ARITHMETIC_OP, r);
    return r;
  }

  /* ********************************************************** */
  // ArithmeticBitwiseAndWrapper ArithmeticBitwiseOrExpression*
  static boolean ArithmeticBitwiseOrWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseOrWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArithmeticBitwiseAndWrapper(b, l + 1);
    r = r && ArithmeticBitwiseOrWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ArithmeticBitwiseOrExpression*
  private static boolean ArithmeticBitwiseOrWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticBitwiseOrWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ArithmeticBitwiseOrExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArithmeticBitwiseOrWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ArithmeticMultiplicativeOperator ArithmeticValueExpression
  public static boolean ArithmeticMultiplicativeExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticMultiplicativeExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, ARITHMETIC_EXPRESSION, "<Expression>");
    r = ArithmeticMultiplicativeOperator(b, l + 1);
    r = r && ArithmeticValueExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '*' | '/' | '%'
  public static boolean ArithmeticMultiplicativeOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticMultiplicativeOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARITHMETIC_OP, "<arithmetic multiplicative operator>");
    r = consumeToken(b, STAR);
    if (!r) r = consumeToken(b, SLASH);
    if (!r) r = consumeToken(b, PERCENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ArithmeticValueExpression ArithmeticMultiplicativeExpression*
  static boolean ArithmeticMultiplicativeWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticMultiplicativeWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArithmeticValueExpression(b, l + 1);
    r = r && ArithmeticMultiplicativeWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ArithmeticMultiplicativeExpression*
  private static boolean ArithmeticMultiplicativeWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticMultiplicativeWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ArithmeticMultiplicativeExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArithmeticMultiplicativeWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ('(' ArithmeticBitwiseOrWrapper ')') | Expression
  public static boolean ArithmeticValueExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticValueExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ARITHMETIC_VALUE_EXPRESSION, "<Expression>");
    r = ArithmeticValueExpression_0(b, l + 1);
    if (!r) r = Expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '(' ArithmeticBitwiseOrWrapper ')'
  private static boolean ArithmeticValueExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticValueExpression_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && ArithmeticBitwiseOrWrapper(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LocalVariableExpression '(' Expression ')'
  public static boolean ArrayAccessExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayAccessExpression")) return false;
    if (!nextTokenIs(b, "<Expression>", DOLLAR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_ACCESS_EXPRESSION, "<Expression>");
    r = LocalVariableExpression(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // DEFINE_TYPE LocalVariableExpression '(' Expression ')' ';'
  public static boolean ArrayVariableDeclarationStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayVariableDeclarationStatement")) return false;
    if (!nextTokenIs(b, "<Statement>", DEFINE_TYPE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_VARIABLE_DECLARATION_STATEMENT, "<Statement>");
    r = consumeToken(b, DEFINE_TYPE);
    r = r && LocalVariableExpression(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    p = r; // pin = 3
    r = r && report_error_(b, Expression(b, l + 1));
    r = p && report_error_(b, consumeTokens(b, -1, RPAREN, SEMICOLON)) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ArrayAccessExpression | LocalVariableExpression | ScopedVariableExpression
  static boolean AssignableExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignableExpression")) return false;
    if (!nextTokenIs(b, "<Expression>", DOLLAR, PERCENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<Expression>");
    r = ArrayAccessExpression(b, l + 1);
    if (!r) r = LocalVariableExpression(b, l + 1);
    if (!r) r = ScopedVariableExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // AssignableExpression (',' AssignableExpression)* '=' Expression (',' Expression)* ';'
  public static boolean AssignmentStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement")) return false;
    if (!nextTokenIs(b, "<Statement>", DOLLAR, PERCENT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STATEMENT, "<Statement>");
    r = AssignableExpression(b, l + 1);
    r = r && AssignmentStatement_1(b, l + 1);
    r = r && consumeToken(b, EQUAL);
    p = r; // pin = 3
    r = r && report_error_(b, Expression(b, l + 1));
    r = p && report_error_(b, AssignmentStatement_4(b, l + 1)) && r;
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' AssignableExpression)*
  private static boolean AssignmentStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AssignmentStatement_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AssignmentStatement_1", c)) break;
    }
    return true;
  }

  // ',' AssignableExpression
  private static boolean AssignmentStatement_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && AssignableExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' Expression)*
  private static boolean AssignmentStatement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AssignmentStatement_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AssignmentStatement_4", c)) break;
    }
    return true;
  }

  // ',' Expression
  private static boolean AssignmentStatement_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentStatement_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' StatementList '}'
  public static boolean BlockStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStatement")) return false;
    if (!nextTokenIs(b, "<Statement>", LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_STATEMENT, "<Statement>");
    r = consumeToken(b, LBRACE);
    r = r && StatementList(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean BooleanLiteralExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BooleanLiteralExpression")) return false;
    if (!nextTokenIs(b, "<Expression>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LITERAL_EXPRESSION, "<Expression>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
